# EmailMCP

./: .env.example  .gitignore  DEBUG_IMPROVEMENTS_SUMMARY.md  DEMO_RESULTS.md  DOCUMENTATION_UPDATE_SUMMARY.md  MCP_EMAIL_FUNCTIONS.md  MCP_EMAIL_FUNCTIONS_FOR_LLMS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  UPDATED_DOCUMENTATION_SUMMARY.md  agoda_travel_report.json  debug_com_properties.py  debug_folder_ids.py  debug_list_emails.py  debug_working_email.py  docker_config.json  email_body_test_results.json  main.py  mcp_test.bat  n8n_list_emails.bat  n8n_test_folders.bat  outlook_mcp_server_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_server.py  test_50_email_bodies_direct.py  test_50_email_bodies_http.py  test_chinese_folder.json  test_debug_folders.py  test_debug_prints.py  test_direct_get_email.py  test_email_bodies.py  test_folder_id.py  test_folder_id_proper.py  test_get_email_debug.py  test_get_email_fix.py  test_list_emails.json  test_list_inbox.json  test_memory_import.py  (+10 more)
config/: development.json  production.json
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  EXAMPLES.md  HTTP_API_EXAMPLES.md  N8N_EXAMPLE_JSON.md  N8N_INTEGRATION_SETUP.md  SETUP_GUIDE.md  TROUBLESHOOTING.md
email_mcp/: __init__.py  cli.py  clients.py  config.py  server.py
examples/: deployment_examples.py  logging_demo.py  mcp_client_simulation.py  mock_mcp_demo.py  send_email_demo.py  travel_expense_analyzer.py
scripts/: health_check.py  install_service.py
tests/: INTEGRATION_TESTING.md  __init__.py  integration_test_config.py  pytest_integration.ini  (+12 more)
(+40 files in other folders)
